# study-bot

./: README.md  dcbot_api.py  pyproject.toml  study.py  study_data.json
bot/: dcbot_api.py  dcbot_ollama.py  embeddings.py  main.py  study.py  study_data.json
json_knowledge/: 國文.json
upload/: app.py
